--- a/notebook/t01_mie.ipynb
+++ b/notebook/t01_mie.ipynb
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
     "#, kv2[iwv], xdv[0], xdv[-1], xdv[1]-xdv[0]]\n",
     "print(nkd.shape)\n",
     "\n",
-    "pickle.dump(nkd, open(\"gold_nk.pkl\", \"wb\" ))"
+    "pickle.dump(nkd, open(\"../data/gold_nk.pkl\", \"wb\" ))"
    ]
   },
   {
