--- a/notebook/t02_mstm.ipynb
+++ b/notebook/t02_mstm.ipynb
@@ -88,19 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing base1p.inp\n"
+      "Overwriting ../data/base1p.inp\n"
      ]
     }
    ],
    "source": [
-    "%%writefile \"base1p.inp\" \n",
+    "%%writefile \"../data/base1p.inp\" \n",
     "base file"
    ]
   },
