update t02_mstm size parameter

--- a/notebook/t02_mstm.ipynb
+++ b/notebook/t02_mstm.ipynb
@@ -23,9 +23,9 @@
    "metadata": {},
    "source": [
     "### MMSTM input file \n",
-    "- All length are defined in terms of <a href=\"http://glossary.ametsoc.org/wiki/Size_parameter\">size paratmer</a>: $\\alpha = \\pi d/\\lambda$, where d is the diameter of the particle, and $\\lambda$ is the wavelength of the incident radiation. MSTM define size parameter as $x=ka = 2\\pi a/\\lambda$ where a the particle radius which is the same. \n",
+    "- All length are defined in terms of <a href=\"http://glossary.ametsoc.org/wiki/Size_parameter\">size paratmer</a>: $\\alpha = \\pi d/\\lambda$, where d is the diameter of the particle, and $\\lambda$ is the wavelength of the incident radiation. MSTM define size parameter as $x=ka = 2\\pi a/\\lambda$ where a is the particle radius. Therefore it is the same as using diameter. \n",
     "\n",
-    "- sphere_position_file: if empty define by sphere_sizes_and_positions:\n",
+    "- sphere_position_file: if the file is empty, then positons will be defined in the input file by sphere_sizes_and_positions:\n",
     "radius, x, y, z, real, imag\n",
     "\n",
     "- length_scale_factor: $2 \\pi/\\lambda$,\n",
@@ -40,10 +40,8 @@
     "- medium_imag_ref_index: 0.0\n",
     "- mie_epsilon\n",
     "- target_euler_angles_deg: 0.0d0,0.0d0,0.0d0\n",
-    "- incident_azimuth_angle_deg\n",
-    "0.d0\n",
-    "- incident_polar_angle_deg\n",
-    "0.0d0\n",
+    "- incident_azimuth_angle_deg: 0.d0\n",
+    "- incident_polar_angle_deg: 0.0d0\n",
     "- t_matrix_file: File name for the file to which the T matrix is read (option 0), written (option 1), or read and appended (2).\n",
     "- output_file: File name for file to which final calculation results are written;"
    ]
@@ -53,7 +51,8 @@
    "metadata": {},
    "source": [
     "### MMSTM input length scale \n",
-    "Note that the input value for PyMieScatt MieQ is wavelength and particle diameter. The input particle size for MSTM is radius with a scale factor of $2 \\pi /\\lambda$. Therefore the radius value is the same as the size paramter $2 \\pi r/\\lambda= \\pi d /\\lambda$."
+    "\n",
+    "There is confusion when comparing PyMieScatt results and MSTM. Since PyMieScatt ask for diameter and MSTM asks for radius. However, the scale factor for MSTM is $2 \\pi /\\lambda$. Therefore the radius value in MSTM will produce the same size paramter $2 \\pi r/\\lambda= \\pi d /\\lambda$. Simply speaking, just use the size parameter for the sphere to define sphere radius in MSTM. "
    ]
   },
   {
