study scattering of two sphere

--- a/notebook/t01_mie.ipynb
+++ b/notebook/t01_mie.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "<CENTER>\n",
     "<H1 style=\"color:red\">\n",
-    "Scattering properties\n",
+    "Scattering properties of a single sphere from Mie calculation\n",
     "</H1>\n",
     "</CENTER>"
    ]
@@ -290,6 +290,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The definitions of the output quantities are documented in https://pymiescatt.readthedocs.io/en/latest/forward.html. Specifically $Q_{back}$ is defined as\n",
+    "![title](../img/PyMieScatt_Q.png)\n",
+    "This is the 180 deg backscattering (radar cross section or lidar cross section)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### multiple size and wavelength"
    ]
   },
@@ -448,7 +457,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Interpolate wavelength"
+    "### Comparing with literature with correction of refrative index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Smalller size of gold nanoparticles need correction of the bulk refractive index. The corrections are discussed in <a href=\"https://pubs.acs.org/doi/10.1021/ac0702084\"> Haiss et al, Anal. Chem. 2007, 79, 4215-4221  </a>.\n",
+    "The correction is significant for diameter < 15nm ((Figure 3). We can have a comparison of the $Q_{ext}$ to the more rigor method in Haiss et al's paper Figure 4a. We have good agreement. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](../img/Haiss_figures.png)\n",
+    "\n",
+    "Image Source: <a href=\"https://pubs.acs.org/doi/10.1021/ac0702084\"> Haiss et al, Anal. Chem. 2007, 79, 4215-4221 </a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interpolate wavelength for more regular grids"
    ]
   },
   {
@@ -514,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -536,6 +569,7 @@
     "#dv=np.linspace(10,100,10)\n",
     "#dv=np.array([2.5, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90,100])\n",
     "datav=run_mie(nv2, kv2, wv2, dv2)\n",
+    "pickle.dump([nv2, kv2, wv2, dv2, datav], open(\"../data/gold_mie.pkl\", \"wb\" ))\n",
     "\n",
     "fileout='/Users/mgao1/Desktop/gold_nanoparticle2.pdf'\n",
     "plot_q(datav, wv2,dv2, fileout)"
@@ -543,7 +577,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_for_mstm(nv2, kv2, wv2, dv2):\n",
+    "\n",
+    "    def sp(dv,wv):\n",
+    "        return np.pi*dv/wv\n",
+    "    \n",
+    "    nkd=np.array([[wv2[iwv], nv2[iwv],kv2[iwv], \\\n",
+    "                   sp(dv2[0],wv2[iwv]), \\\n",
+    "                   sp(dv2[-1],wv2[iwv]), \n",
+    "                   sp(dv2[1]-dv2[0],wv2[iwv])] for iwv in range(len(wv2))])\n",
+    "    #, kv2[iwv], xdv[0], xdv[-1], xdv[1]-xdv[0]]\n",
+    "    print(nkd.shape)\n",
+    "\n",
+    "    pickle.dump([nv2, kv2, wv2, dv2, nkd], open(\"../data/gold_nk.pkl\", \"wb\" ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -555,16 +610,7 @@
     }
    ],
    "source": [
-    "def sp(dv,wv):\n",
-    "    return np.pi*dv/wv\n",
-    "nkd=np.array([[wv2[iwv], nv2[iwv],kv2[iwv], \\\n",
-    "               sp(dv[0],wv2[iwv]), \\\n",
-    "               sp(dv[-1],wv2[iwv]), \n",
-    "               sp(dv[1]-dv[0],wv2[iwv])] for iwv in range(len(wv2))])\n",
-    "#, kv2[iwv], xdv[0], xdv[-1], xdv[1]-xdv[0]]\n",
-    "print(nkd.shape)\n",
-    "\n",
-    "pickle.dump(nkd, open(\"../data/gold_nk.pkl\", \"wb\" ))"
+    "save_for_mstm(nv2, kv2, wv2, dv2)"
    ]
   },
   {
