study one GNP sphere with one protein sphere

--- a/notebook/t02_mstm.ipynb
+++ b/notebook/t02_mstm.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "(50, 6)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,8 @@
     "src_file='base1p.inp'\n",
     "\n",
     "#add parameters for refractive index and size\n",
-    "for iwv in range(len(nkd)):\n",
+    "for idv in range(dv2):\n",
+    "for iwv in range(:\n",
     "    #print(iwv, nkd[iwv,0], nkd[iwv,1])\n",
     "\n",
     "    new_file='test'+str(iwv)+'.inp'\n",
@@ -336,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
