Correction on typos

--- a/notebook/t04_two_spheres_total.ipynb
+++ b/notebook/t04_two_spheres_total.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "## Output of MSTM \n",
     "\n",
-    "There are options to output the scattreing properties for each spheres or the total properties. \n",
+    "There are options to output the scattreing properties for each sphere or the total properties. \n",
     "\n",
     "- The extinction, scattering, and absorption efficiencies for each of the sphere surface are outputed\n",
     "- The total extinction, scattering, and absorption efficiencies of the target, for unpolarized incident\n",
@@ -42,8 +42,8 @@
     "\n",
     "**Previous study analyze the properties for one sphere surface. Here we looked at the total properties.**\n",
     "\n",
-    "### Two spheres far away\n",
-    "**We have also studied the Q for two spheres far away, and their scattering properties can directly related to independent scattering of one spheres**\n",
+    "### Two spheres far away from each other\n",
+    "**We have studied the Q for two spheres far away from each other, and their scattering properties can directly related to independent scattering of one sphere**\n",
     "\n",
     "The total scattering cross section of two spheres which are far apart should\n",
     "be twice of the cross section for one sphere, $C_{scat,2}=2*C_{scat,1}$. \n",
@@ -889,7 +889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
