multiple spheres attached with GNP

--- a/notebook/t06_coated_GNP.ipynb
+++ b/notebook/t06_coated_GNP.ipynb
@@ -59,16 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11c8c2a50>"
+       "<matplotlib.legend.Legend at 0x10e5a3950>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -118,6 +118,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump([qextv2,qscav2, qabsv2, qbackv2,gv2],open(\"../data/mie_gnp_coated0.pkl\",\"wb\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -129,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +190,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tshell=20\n",
+    "[qextv3,qscav3, qabsv3, qbackv3,gv3]=run_mie_coated(nv2, kv2, wv2, dv2,tshell=tshell)\n",
+    "pickle.dump([qextv3,qscav3, qabsv3, qbackv3,gv3],open(\"../data/mie_gnp_coated20.pkl\",\"wb\"))\n",
+    "\n",
+    "tshell=10\n",
+    "[qextv3,qscav3, qabsv3, qbackv3,gv3]=run_mie_coated(nv2, kv2, wv2, dv2,tshell=tshell)\n",
+    "pickle.dump([qextv3,qscav3, qabsv3, qbackv3,gv3],open(\"../data/mie_gnp_coated10.pkl\",\"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
