add some reference and add study in color

--- a/notebook/t08_SingleGNP_in_water.ipynb
+++ b/notebook/t08_SingleGNP_in_water.ipynb
@@ -802,6 +802,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The results can be confirmed from <a https=https://nanocomposix.com/pages/gold-nanoparticles-optical-properties> The Effect of Local Refractive Index on Optical Properties </a>. \n",
+    "The peak in water become enhanced. \n",
+    "![title](https://cdn.shopify.com/s/files/1/0257/8237/files/EffectRefIndex_1_0.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Impact of aggregation ![title](https://cdn.shopify.com/s/files/1/0257/8237/files/AuSpectrum_aggregation_0.png)\n",
+    "Aggregated solution become blue/purple: ![title](https://cdn.shopify.com/s/files/1/0257/8237/files/aggregation.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Phase function"
    ]
   },
